--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/vue-fontawesome": "^3.0.5",
+    "axios": "^1.6.4",
+    "bootstrap": "^5.3.2",
     "pinia": "^2.1.7",
+    "sass": "^1.69.7",
     "vue": "^3.3.11"
   },
   "devDependencies": {
